@@ -1,3 +1,12 @@
+2026-02-10T01:59:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21848644218 # 873
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-09T01:49:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21809602541 # 872
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-09
